SERVER-7324: added templated toHexTemp function to hex.h/hex.cpp -replaced incorrect calls of toHex -added test of integerToHex to stringutils_test.cpp -changed building of bsondemo -included hex.cpp to stringutils library package