src/mongo/bson/bson-inl.h
@@ -208,7 +208,7 @@ dodouble:
     inline NOINLINE_DECL void BSONObj::_assertInvalid() const {
         StringBuilder ss;
         int os = objsize();
-        ss << "BSONObj size: " << os << " (0x" << toHex( &os, 4 ) << ") is invalid. "
+        ss << "BSONObj size: " << os << " (0x" << integerToHex( os ) << ") is invalid. "
            << "Size must be between 0 and " << BSONObjMaxInternalSize
            << "(" << ( BSONObjMaxInternalSize/(1024*1024) ) << "MB)";
         try {
